# server/pkg/usecase/usecore/user.go
@@ -18,3 +18,11 @@ func NewUser(userRepo repo.User) *User {
 func (u *User) GetUserByID(ctx context.Context, id string) (*domain.User, error) {
 	return u.userRepo.GetUserByID(ctx, id)
 }
+
+func (u *User) PatchUser(c *Context, patchUser *domain.PatchUser) (*domain.User, error) {
+	err := u.userRepo.PatchUser(c, c.UserID, patchUser)
+	if err != nil {
+		return nil, err
+	}
+	return u.GetUserByID(c, c.UserID)
+}
